--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.4.0",
+    "isomorphic-dompurify": "^2.0.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "prop-types": "^15.8.1",
